# PSP

./: .gitignore  README.md  environment.yml  old_pyproject.oldtoml  pyproject.toml
.devcontainer/: devcontainer.json
Backups/: Data Ingestion.ipynb
notebooks/: TargetScreener.ipynb  app.py  epmc_top_targets.csv  normalized_targets.csv  normalized_targets_harmonized.csv  output.csv  output_harmonized.csv  output_with_normalized.csv
src/d03_processing/: create_master_table.py
src/targetscraper/: app.py  utils.py
src/targetscraper/d01_data/: load_data.py
src/targetscraper/d02_intermediate/: create_int_data.py
src/targetscraper/d03_processing/: create_master_table.py
src/targetscraper/d04_postprocessing/: analysis.py  llm_client.py  llm_prompts.py  llm_prompts.py - Copy.py
