[project]
name = "targetscraper"
version = "0.1.0"
description = "Package to extract targets (Genes / Proteins) associated with particular term from research publications at European PMC"
authors = [
    {name = "Akshay Kakar",email = "akshaykakar@gmail.com"}
]
packages = [{ include = "targetscraper", from = "src" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "tqdm>=4.0",
    "pandas>=2.0",
    "requests>=2.0",
    "streamlit>=1.0",
]

[project.scripts]
targetscraper-app = "targetscraper.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
