[project]
name = "targetscraper"
version = "0.1.0"
description = "Package to extract targets (Genes / Proteins) associated with user input from research publications at European PMC and use Gemini to help prioritize targets."
authors = [
    {name = "Akshay Kakar",email = "akshaykakar@gmail.com"}
]
packages = [{ include = "targetscraper", from = "src" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    # Core
    "requests>=2.0",
    "tqdm>=4.0",

    # Data stack (pin to avoid numpy 2.x breakage)
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<2.3",

    # App/UI
    "streamlit>=1.0",

    # LLM
    "google-genai>=0.4.0",
]

[project.scripts]
targetscraper-app = "targetscraper.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"